--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.23.3"
+    "zod": "^3.23.3",
+    "framer-motion": "^11.2.6",
+    "gsap": "^3.12.5",
+    "react-icons": "^5.2.1",
+    "react-typed": "^2.0.12"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
