--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.4",
+    "framer-motion": "^11.2.6",
     "geist": "^1.3.0",
+    "gsap": "^3.12.5",
+    "lenis": "^1.0.45",
     "next": "^14.2.1",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.23.3",
-    "framer-motion": "^11.2.6",
-    "gsap": "^3.12.5",
     "react-icons": "^5.2.1",
-    "react-typed": "^2.0.12"
+    "react-typed": "^2.0.12",
+    "zod": "^3.23.3"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
