--- a/package.json
+++ b/package.json
@@ -12,20 +12,31 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/postgres": "^0.8.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.29.4",
     "framer-motion": "^11.2.6",
     "geist": "^1.3.0",
     "gsap": "^3.12.5",
     "lenis": "^1.0.45",
+    "lucide-react": "^0.381.0",
     "next": "^14.2.1",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-typed": "^2.0.12",
-    "zod": "^3.23.3"
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
